tests/compile_errors/001-const.buzz
import "zig-out/lib/libstd.dylib";

test "`const` variable" {
    const str yo = "yo";

    yo = "no way";
}

| function arguments are `const`
fun illegal(str yo) {
    yo = "no way";
}

enum Hey {
    lo,
    joe,
}

test "assigning to enum field" {
    Hey.lo = 1;
}